Moving subclasses of BuildTargetSourcePath to be immutable/generated.
Summary:
Moving subclasses of BuildTargetSourcePath to be immutable/generated.

Subclasses in question (now abstract and generating through org.immutables:
        "AbstractDefaultBuildTargetSourcePath.java",
        "AbstractExplicitBuildTargetSourcePath.java",
        "AbstractForwardingBuildTargetSourcePath.java",

Test Plan:
ant clean && ant
bin/buck build buck
buck test

Reviewed By: asp2insp

fbshipit-source-id: a2b7e55