@@ -131,7 +131,7 @@ public class CxxLibraryDescriptionTest {
           CxxDescriptionEnhancer.createHeaderSymlinkTreeTarget(
               target, headerVisibility, cxxPlatform.getFlavor());
       return Optional.of(
-          new ExplicitBuildTargetSourcePath(
+          ExplicitBuildTargetSourcePath.of(
               headerMapBuildTarget,
               HeaderSymlinkTreeWithHeaderMap.getPath(filesystem, headerMapBuildTarget)));
     } else {
@@ -205,12 +205,12 @@ public class CxxLibraryDescriptionTest {
             .setExportedHeaders(
                 ImmutableSortedSet.of(
                     new FakeSourcePath(headerName),
-                    new DefaultBuildTargetSourcePath(genHeaderTarget)))
+                    DefaultBuildTargetSourcePath.of(genHeaderTarget)))
             .setHeaders(ImmutableSortedSet.of(new FakeSourcePath(privateHeaderName)))
             .setSrcs(
                 ImmutableSortedSet.of(
                     SourceWithFlags.of(new FakeSourcePath("test/bar.cpp")),
-                    SourceWithFlags.of(new DefaultBuildTargetSourcePath(genSourceTarget))))
+                    SourceWithFlags.of(DefaultBuildTargetSourcePath.of(genSourceTarget))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourcePath(new FakeSourcePath("/some/framework/path/s.dylib")),
@@ -255,7 +255,7 @@ public class CxxLibraryDescriptionTest {
                 Paths.get(headerName),
                 new FakeSourcePath(headerName),
                 Paths.get(genHeaderName),
-                new DefaultBuildTargetSourcePath(genHeaderTarget))));
+                DefaultBuildTargetSourcePath.of(genHeaderTarget))));
     assertThat(
         publicHeaders.getHeaderMap(),
         equalTo(getHeaderMaps(filesystem, target, resolver, cxxPlatform, HeaderVisibility.PUBLIC)));
@@ -480,11 +480,11 @@ public class CxxLibraryDescriptionTest {
         new CxxLibraryBuilder(target, cxxBuckConfig)
             .setExportedHeaders(
                 ImmutableSortedMap.of(
-                    genHeaderName, new DefaultBuildTargetSourcePath(genHeaderTarget)))
+                    genHeaderName, DefaultBuildTargetSourcePath.of(genHeaderTarget)))
             .setSrcs(
                 ImmutableSortedSet.of(
                     SourceWithFlags.of(new FakeSourcePath(sourceName)),
-                    SourceWithFlags.of(new DefaultBuildTargetSourcePath(genSourceTarget))))
+                    SourceWithFlags.of(DefaultBuildTargetSourcePath.of(genSourceTarget))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourcePath(new FakeSourcePath("/some/framework/path/s.dylib")),
@@ -524,7 +524,7 @@ public class CxxLibraryDescriptionTest {
         publicHeaders.getNameToPathMap(),
         equalTo(
             ImmutableMap.<Path, SourcePath>of(
-                Paths.get(genHeaderName), new DefaultBuildTargetSourcePath(genHeaderTarget))));
+                Paths.get(genHeaderName), DefaultBuildTargetSourcePath.of(genHeaderTarget))));
     assertThat(
         publicHeaders.getHeaderMap(),
         equalTo(getHeaderMaps(filesystem, target, resolver, cxxPlatform, HeaderVisibility.PUBLIC)));
@@ -1294,7 +1294,7 @@ public class CxxLibraryDescriptionTest {
         new CxxLibraryBuilder(BuildTargetFactory.newInstance("//:lib"))
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new DefaultBuildTargetSourcePath(srcBuilder.getTarget()))));
+                    SourceWithFlags.of(DefaultBuildTargetSourcePath.of(srcBuilder.getTarget()))));
     TargetGraph targetGraph =
         TargetGraphFactory.newInstance(srcBuilder.build(), libraryBuilder.build());
     BuildRuleResolver ruleResolver =
@@ -1317,7 +1317,7 @@ public class CxxLibraryDescriptionTest {
         new CxxLibraryBuilder(BuildTargetFactory.newInstance("//:lib"))
             .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.cpp"))))
             .setHeaders(
-                ImmutableSortedSet.of(new DefaultBuildTargetSourcePath(srcBuilder.getTarget())));
+                ImmutableSortedSet.of(DefaultBuildTargetSourcePath.of(srcBuilder.getTarget())));
     TargetGraph targetGraph =
         TargetGraphFactory.newInstance(srcBuilder.build(), libraryBuilder.build());
     BuildRuleResolver ruleResolver =
