@@ -194,7 +194,7 @@ public class FieldTypeInfosTest {
 
     BuildTarget target = BuildTarget.of(Paths.get("some"), "//some", "name");
     BuildRule rule = new FakeBuildRule(target, ImmutableSortedSet.of());
-    BuildTargetSourcePath sourcePath = new ExplicitBuildTargetSourcePath(target, Paths.get("path"));
+    BuildTargetSourcePath sourcePath = ExplicitBuildTargetSourcePath.of(target, Paths.get("path"));
 
     InputPath value = new InputPath(sourcePath);
     EasyMock.expect(inputRuleResolver.resolve(value)).andReturn(Optional.of(rule));
@@ -215,7 +215,7 @@ public class FieldTypeInfosTest {
 
     BuildTarget target = BuildTarget.of(Paths.get("some"), "//some", "name");
     BuildRule rule = new FakeBuildRule(target, ImmutableSortedSet.of());
-    BuildTargetSourcePath sourcePath = new ExplicitBuildTargetSourcePath(target, Paths.get("path"));
+    BuildTargetSourcePath sourcePath = ExplicitBuildTargetSourcePath.of(target, Paths.get("path"));
 
     InputPath inputPath = new InputPath(sourcePath);
     Optional<InputPath> value = Optional.of(inputPath);
@@ -252,7 +252,7 @@ public class FieldTypeInfosTest {
     BuildTarget target = BuildTarget.of(Paths.get("some"), "//some", "name");
     BuildRule rule = new FakeBuildRule(target, ImmutableSortedSet.of());
     BuildTargetSourcePath targetSourcePath =
-        new ExplicitBuildTargetSourcePath(target, Paths.get("path"));
+        ExplicitBuildTargetSourcePath.of(target, Paths.get("path"));
     InputPath targetInputPath = new InputPath(targetSourcePath);
 
     PathSourcePath pathSourcePath = new PathSourcePath(filesystem, Paths.get("path"));
